horus_cpp_macros/tests/pass/unit_struct.rs
use horus_cpp_macros::horus_api;

#[horus_api]
pub struct Marker;

fn main() {
    let _m = Marker;
}
